[package]
name = "Oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oxygen-server"
path = "src/server.rs"

[[bin]]
name = "oxygen-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"]}

[build-dependencies]
tonic-build = "0.8"
